--- a/P5_INSTAGRAM_KARBYTES_2022.html
+++ b/P5_INSTAGRAM_KARBYTES_2022.html
@@ -6,6 +6,7 @@
 <p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
 <p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
 <hr>
+<p>image_page_49: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_49/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_49</a> <strong style="background:#d97ea7;">(-)</strong></p>
 <p>image_page_48: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_48/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_48</a> <strong style="background:#47f52c;">(+)</strong></p>
 <p>image_page_47: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_47/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_47</a> <strong style="background:#47f52c;">(+)</strong></p>
 <p>image_page_46: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_46/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_46</a> <strong style="background:#47f52c;">(+)</strong></p>
@@ -56,5 +57,5 @@
 <p>image_page_1: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_1/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_1</a> <strong style="background:#47f52c;">(+)</strong></p>
 <p>image_page_0: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_0/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_0</a> <strong style="background:#47f52c;">(+)</strong></p>
 <hr>
-<p>This page was last updated on 01_JULY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This page was last updated on 03_JULY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
