--- a/P4_(-2)_INSTAGRAM_KARBYTES_2022.html
+++ b/P4_(-2)_INSTAGRAM_KARBYTES_2022.html
@@ -1,10 +1,15 @@
 <hr>
-<p><strong>INSTAGRAM_KARBYTES_2022</strong></p>
+<p><strong>PINK_BIN_DISGUISED_AS_GREEN_BIN</strong></p>
 <hr>
-<p><span style="background:#ffff00;">This web page is a directory which leads to web pages which each display exactly one screenshot image of content published on the <a style="background:#000000;color:#ff9000;" href="https://www.instagram.com/karbytes/" target="_blank" rel="noopener">@karbytes</a> Instagram page during the year 2022.</span></p>
+<p><span style="background:#ffff00;">Each of the following web page links below leads to a particular directory page which displays a list of component web pages. Most of those component web pages displays a single screenshot image taken of social media posts made by Karlina Ray Beringer (<a style="background:#000000;color:#ff9000;" href="https://www.minds.com/karbytes/" target="_blank" rel="noopener">@karbytes</a>). Each of the screenshot images was backed up to Archive dot Org using the WayBack Machine.</span></p>
+<p><em>The directory pages whose index numbers are 53 to 63 were the author’s attempts to get out of the pink bin and into the green bin as quickly as possible only to later discover that the pink was an insidious poison which seeped into those directories and revealed them to be pink bin directories disguised as green bin directories. It’s akin to a person being asleep and thinking that it woke up from a dream only to find that it is still asleep inside of some dream. (Yes, it is theoretically possible to have dreams inside of dreams).</em></p>
+<p><strong><em>Note also that the Instragram 2022 pages whose index numbers are 0 to 53 have have been classified as pink bin content and are, hence, referenced using their respective hyperlinks below.</em></strong></p>
 <hr>
-<p><em>This repository contains web page source code and media files which constitute the intellectual property encapsulated by the website named Karbytes For Life dot WordPress dot Com.</em></p>
-<p>repository_link: <a style="background:#000000;color:#ff9000;" href="https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022" target="_blank" rel="noopener">https://github.com/karlinarayberinger/INSTAGRAM_KARBYTES_2022</a></p>
+<p><span style="background:#47f52c;">The Green Bin</span></p>
+<hr>
+<p>upper_level_directory_pages: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/minds_karbytes_et_cetera_2022/" target="_blank" rel="noopener">MINDS_KARBYTES_ET_CETERA_2022</a></p>
+<hr>
+<p><span style="background:#d97ea7;">The Pink Bin</span></p>
 <hr>
 <p>image_page_53: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_53/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_53</a> <strong style="background:#47f52c;">(+)</strong></p>
 <p>image_page_52: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_52/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_52</a> <strong style="background:#47f52c;">(+)</strong></p>
@@ -60,6 +65,18 @@
 <p>image_page_2: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_2/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_2</a> <strong style="background:#47f52c;">(+)</strong></p>
 <p>image_page_1: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_1/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_1</a> <strong style="background:#47f52c;">(+)</strong></p>
 <p>image_page_0: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/instagram_karbytes_image_page_0/" target="_blank" rel="noopener">INSTAGRAM_KARBYTES_IMAGE_PAGE_0</a> <strong style="background:#47f52c;">(+)</strong></p>
+<p>directory_page_63: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/karbytes_journal_2022_part_5/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_5</a></p>
+<p>directory_page_62: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/karbytes_journal_2022_part_4/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_4</a></p>
+<p>directory_page_61: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/karbytes_journal_2022_part_3/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_3</a></p>
+<p>directory_page_60: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/karbytes_journal_2022_part_2/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_2</a></p>
+<p>directory_page_59: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/karbytes_journal_2022_part_1/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_1</a></p>
+<p>directory_page_58: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/karbytes_journal_2022_part_0/" target="_blank" rel="noopener">KARBYTES_JOURNAL_2022_PART_0</a></p>
+<p>directory_page_57: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/minds_karbytes_2022_part_57/" target="_blank" rel="noopener">MINDS_KARBYTES_2022_PART_57</a></p>
+<p>directory_page_56: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/minds_karbytes_2022_part_56/" target="_blank" rel="noopener">MINDS_KARBYTES_2022_PART_56</a></p>
+<p>directory_page_55: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/minds_karbytes_2022_part_55/" target="_blank" rel="noopener">MINDS_KARBYTES_2022_PART_55</a></p>
+<p>directory_page_54: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/minds_karbytes_2022_part_54/" target="_blank" rel="noopener">MINDS_KARBYTES_2022_PART_54</a></p>
+<p>directory_page_53: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/minds_karbytes_2022_part_53/" target="_blank" rel="noopener">MINDS_KARBYTES_2022_PART_53</a></p>
+<p>lower_level_directory_pages: <a style="background:#000000;color:#ff9000;" href="https://karbytesforlife.wordpress.com/the_pink_bin" target="_blank" rel="noopener">THE_PINK_BIN</a></p>
 <hr>
-<p>This page was last updated on 05_JULY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
+<p>This page was last updated on 06_JULY_2022. The content displayed on this page is licensed as <a style="background:#000000;color:#ff9000;" href="https://karlinaobject.wordpress.com/public_domain/" target="_blank" rel="noopener">PUBLIC_DOMAIN</a> intellectual property.</p>
 <hr>
